# shopify-migrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.claude/plans/: 260623_loop-weekly-menu-autofill-spec.md
infra/: .gitignore
infra/dev/: dev.auto.tfvars.example  main.tf
infra/prod/: main.tf  variables.tf
src/migration/: __main__.py  client.py  config.py  django_db.py  id_map.py  logger.py  progress.py  rate_limiter.py  template.py  vouchers.py
src/migration/menu_autofill/: __init__.py  autofill.py  loop_client.py  menu.py  models.py  planner.py
src/migration/resources/: articles.py  base.py  blogs.py  collections.py  discount_codes.py  files.py  gift_cards.py  inventory.py  meals.py  menus.py  pages.py  price_rules.py  products.py  redirects.py  rewriter.py  selling_plans.py  variant_id_map_builder.py
templates/: product_description.html.j2
tests/: conftest.py  test_client.py  test_id_map.py  test_progress.py  test_rate_limiter.py  test_vouchers.py
tests/menu_autofill/: test_autofill.py  test_loop_client.py  test_menu.py  test_planner.py
tests/resources/: test_articles.py  test_blogs.py  test_collections.py  test_discount_codes.py  test_gift_cards.py  test_meals.py  test_pages.py  test_price_rules.py  test_products.py  test_redirects.py  test_variant_id_map_builder.py
