[project]
name = "shopify-migrator"
version = "0.1.0"
description = "One-time Shopify store migration tool"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.0",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "psycopg[binary]>=3.2",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.scripts]
shopify-migrate = "migration.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/migration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/migration"]
